# PhoenixMath

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  bldAll.bat  bldAll.ps1  bldAll.sh  common.cmake  export.ps1  my.config.bak  my.config.bak.linux  publish.ps1  publish.sh  read_config.cmake
Phoenix/: CMakeLists.txt
Phoenix/Math/: CMakeLists.txt
Phoenix/Math/public/matrix/: MatrixRegion.h
Phoenix/Math/public/sensor/: SensorArea.h
Phoenix/Math/public/shape/: BoundedMatrixXf.h  Bounds2f.hpp  BoundsMatrixXf.h  Rhombus.hpp
Phoenix/Math/public/utility/: Code.h  Code.hpp  Result.hpp  Tools.h
Phoenix/Math/src/matrix/: BoundsMatrixXf.cpp  MatrixRegion.cpp
Phoenix/Math/src/sensor/: SensorArea.cpp
Phoenix/Math/src/shape/: BoundsMatrixXf.cpp
Phoenix/Math/src/utility/: Tools.cpp
Phoenix/loader/: MatrixLoaderHandler.hpp
Phoenix/public/loader/: CoordsMatrixXfLoader.h  ILoader.hpp  IMatrixLoader.hpp  MatrixFormatHandler.hpp  MatrixLoader.h  MatrixLoaderHandler.hpp  PpmLoader.h  YamlLoader.h
Phoenix/public/shape/: BoundedMatrixXf.h  BoundedTensor.h  BoundedTensor3f.h  CoordsMatrixXf.h  EigenDefine.hpp  NonUniformMatrixXf.h
Phoenix/public/utility/: Code.hpp  ColorOutput.h  ErrorCode.hpp  PhoenixDefine.hpp  PropertiesData.hpp  StreamTools.hpp  YamlData.hpp
Phoenix/shape/: BoundedTensor3f.h  CoordsMatrixXf.h  EigenDefine.hpp
Phoenix/src/loader/: CoordsMatrixXfLoader.cpp  MatrixLoader.cpp  PpmLoader.cpp  YamlLoader.cpp
Phoenix/src/shape/: BoundedMatrixXf.cpp  BoundedTensor.cpp  BoundedTensor3f.cpp  CoordsMatrixXf.cpp  NonUniformMatrixXf.cpp
Phoenix/src/utility/: ColorRGB.cpp
Phoenix/utility/: DebugMacro.h
PowerShell/: backupVsCodePlugins.ps1  rightToCursor.ps1
doc/: BoundedMatrixXf.md  BoundedTensor.md  Bounds2f.md  BoundsMatrixXf.md  CoordsMatrixXf.md  NonUniformMatrixXf.md
doc/sample/: CoordsMatrixXf_format_0.txt  CoordsMatrixXf_format_1.txt  config.yaml
math/: CMakeLists.txt
math/Phoenix/loader/: CoordsMatrixXfLoader.h  ILoader.hpp  IMatrixLoader.hpp  MatrixLoader.h  MatrixLoaderHandler.hpp  PpmLoader.h  YamlLoader.h
math/Phoenix/shape/: BoundedMatrixXf.h  BoundedTensor3f.h  CoordsMatrixXf.h  IRowMatrixXf.hpp
math/Phoenix/utility/: ColorRGB.h  ErrorCode.hpp  IData.hpp  YamlData.hpp
math/src/loader/: CoordsMatrixXfLoader.cpp  MatrixLoader.cpp  PpmLoader.cpp  YamlLoader.cpp
math/src/shape/: BoundedMatrixXf.cpp  BoundedTensor3f.cpp  CoordsMatrixXf.cpp
math/src/utility/: ColorOutput.cpp  ColorRGB.cpp  Tools.cpp
test/: inside.hpp
test/math/: CMakeLists.txt  inside.hpp  test_BoundedMatrixXf.cpp  test_Bounds2f.cpp  test_BoundsMatrixXf.cpp  test_ColorRGB.cpp  test_CoordsMatrixXf.cpp  test_MatrixFormatHandler.cpp  test_MatrixLoaderHandler.cpp  test_MatrixRegion.cpp  test_NonUniformMatrixXf.cpp  test_SensorArea.cpp  test_Tools.cpp  test_YamlLoader.cpp
